# llm-zoomcamp-2026

./: my_rag_helper.py  notebook.ipynb  pyproject.toml
01-agentic-rag/homework/: README.md  ZoomCampRAG.py  homework.ipynb  pyproject.toml
02-vector-search/: pyproject.toml
02-vector-search/homework/: homework.ipynb  homework.py  pyproject.toml
02-vector-search/lesson/: faq_vectors2.db-shm  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
