[project]
name = "02-vector-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "onnxruntime>=1.27.0",
    "openai>=2.41.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "tokenizers>=0.22.2",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
    "jupyter>=1.1.1",
]
